--- a/nyt-react-search/public/index.html
+++ b/nyt-react-search/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="stylesheet" type="text/css" href="/reset.css">
   </head>
   <body>
     <noscript>
@@ -36,6 +37,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <p>Test 2</p>
   </body>
 </html>
