Begun integrating socket.io.

--- a/nyt-react-search/public/index.html
+++ b/nyt-react-search/public/index.html
@@ -21,6 +21,10 @@
     -->
     <title>React App</title>
     <link rel="stylesheet" type="text/css" href="/reset.css">
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+    </script>
   </head>
   <body>
     <noscript>
